fix: consolidate speaker lifecycle hardening (#11)
* docs: add agent instructions

* docs: add Android speaker device preview

* ci: enforce Android Speaker trust boundaries

Require one credential-free workflow, owner review coverage, fixed legacy
Gradle configuration, and SDK-free privacy checks across every app source set.
Also correct stale platform TTS guidance and remove the misleading preview.

* docs: plan hosted Android verification

* ci: run full hosted Android verification

* docs: record hosted Android verification

* fix: verify legacy Gradle wrapper downloads

* docs: record hosted wrapper verification

* fix: guard speech listener registration

* docs: plan Android Speaker Make root protection

* fix: protect Android Speaker Make root from overrides

* docs: plan Android Speaker device verification

* docs: add Android Speaker device verification matrix

* docs: plan instrumentation bootstrap assertion

* test: assert Android Speaker bootstrap

* docs: plan speaker utterance ownership tests

* test: cover speaker utterance ownership

* docs: plan explicit speaker launcher export

* fix: declare explicit speaker launcher export

* fix: harden speaker lifecycle ownership